<resources>
    <string name="app_name">MonkeyVideoViewerAndroid</string>
    <string name="base_url">http://192.168.1.124:8080/</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="enter_student_id">Enter Student ID</string>
</resources>
